[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "linkd"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
authors = [{name = "tandemdude", email = "tandemdude1@gmail.com"}]
keywords = ["ioc", "dependency injection", "injection", "inversion of control", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/tandemdude/linkd"
Repository = "https://github.com/tandemdude/linkd"
Documentation = "https://linkd.readthedocs.io/en/latest/"
Changelog = "https://linkd.readthedocs.io/en/latest/changelog.html"

[dependency-groups]
extensions = [
    "fastapi[standard]==0.115.12",
    "redis==5.2.1",
    "quart==0.20.0"
]

dev = ["nox==2025.2.9"]
format = ["ruff==0.11.5"]
test = [
    "pytest>=8.3.2, <9",
    "pytest-asyncio>=0.23.8, <0.27",
    "pytest-cov>=5.0.0, <7",
    "pytest-randomly>=3.15.0, <4"
]
slotscheck = ["slotscheck>=0.19.0, <1"]
release = ["flit==3.12.0"]
changelog = ["towncrier==24.8.0"]

docs = [
    "sphinx>=8.0.2, <9",
    "furo==2024.8.6",
    "myst-parser>=4.0.0, <5",
    "sphinx-copybutton>=0.5.2, <1",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx_design>=0.6.0, <1",
    "sphinx-notfound-page>=1.0.2, <2",
    "sphinxext-opengraph>=0.9.1, <1",
    {include-group = "extensions"}
]
typecheck = [
    "pyright==1.1.399",
    {include-group = "extensions"},
    {include-group = "test"}
]

[tool.flit.module]
name = "linkd"

[tool.towncrier]
directory = "fragments"
filename = "CHANGES.md"
package = "linkd"
title_format = "v{version} ({project_date})"
issue_format = "[#{issue}](https://github.com/tandemdude/linkd/issues/{issue})"
orphan_prefix = "+"
type = [
    { directory = "breaking", name = "Breaking Changes", showcontent = true },
    { directory = "removal", name = "Removals", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Miscellaneous", showcontent = true },
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "TCH",   # typechecking imports
    "N",     # naming
    "ASYNC", # async lints
    "Q",     # enforce double-quotes
    "RSE",   # avoid needless parens
    "SIM",   # simplification
    "RUF",   # ruff lints
    "D2",    # Docstring formatting
    "D213",  # Multi-line docstring summary should start at the second line
    "D3",    # Use triple-quotes
    "D415",  # First line of docstring should end with period
    "D417",  # Missing argument descriptions in docstring
    "D418",  # No docstring on @overload
    "D419",  # No empty docstring
    "ANN2",  # Function missing return type annotation
]
fixable = [
    "I",     # isort errors
    "TCH",   # typechecking imports
    "F401",  # unused import
    "F404",  # late __future__ import
    "F541",  # f-string with no placeholders
    "RUF022",  # __all__ is not sorted
    "RUF023",  # {}.__slots__ is not sorted
]
ignore = [
    "D212",  # Multi-line docstring summary should start at the first line
    "RUF001", # ambiguous character
    "N818",   # exception name should end in Error
    "D205",   # 1 blank line required between summary line and description
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
# F401 (Unused import) - init files don't use their imports
# F403 (Star import used) - hopefully we're sensible enough to know what objects modules contain
# F405 (Import via star) - everything is imported to top-level
"__init__.py" = ["F401", "F403", "F405"]

# N802 (Function name should be lowercase)
# RUF029 (Function is declared async but does not use async/await)
"tests/*.py" = ["N802", "RUF029"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true

[tool.pyright]
include = ["linkd", "examples", "tests"]
exclude = ["docs", ".github"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"
reportMissingTypeStubs = "none"
reportImportCycles = "none" # Doesn't account for TYPE_CHECKING
reportIncompatibleMethodOverride = "none"  # This relies on ordering for keyword-only arguments
reportOverlappingOverload = "none" # Type-Vars in last overloads may interfere
reportIncompatibleVariableOverride = "none" # Cannot overwrite abstract properties using attrs
reportPrivateUsage = "none" # Too annoying
reportUnknownMemberType = "warning"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning',
    "ignore:.*The loop argument is deprecated.*:DeprecationWarning"
]

[tool.coverage.report]
exclude_also = ["if t.TYPE_CHECKING:"]
